--- a/assets/lang/de-DE.json
+++ b/assets/lang/de-DE.json
@@ -16,7 +16,7 @@
     "width":"Junge"
   },
   "resultDetail":{
-    "weak":"Unter 18, 5 kg / m",
+    "weak":"Unter 18, 5 kg / m.Eins zwischen: schwach",
     "normalWeight":"18,5 - 24, 9 kg / m.Eins zwischen: Normal übergewichtig",
     "overweight":"25 bis 29, 9 kg / m.Eins zwischen: Übergewichtig",
     "obese":"30 bis 39, 9 kg / m.Eins zwischen: fettleibig",
